# hello-bazel-pycon-il

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  Dockerfile  Dockerfile.test  MODULE.bazel  README.md  integration_test.py  main.py  pyproject.toml  requirements.txt  requirements_linux_lock.txt  requirements_lock.txt  test_app.py  transition.bzl
hello_rs/: BUILD.bazel  Cargo.toml  pyproject.toml
hello_rs/src/: lib.rs
src/demo/: bazel_app.py
tests/: test_app.py
